--- a/Server/CMakeLists.txt
+++ b/Server/CMakeLists.txt
@@ -4,20 +4,23 @@ project(Server C CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
-find_package(Poco COMPONENTS Net Util Data REQUIRED)
-find_package(PostgreSQL REQUIRED)
+find_package(Poco COMPONENTS Net Util Data MongoDB REQUIRED)
+find_package(Boost)
+# find_package(PostgreSQL REQUIRED)
 
 file(GLOB HEADERS_Server
 		factory/include/*.h
 		handlers/include/*.h
-		postgres/include/*.h
+		database/mongodb/include/*.h
+		# database/postgres/include/*.h
 		server-run/include/*.h
 	)
 
 file(GLOB SOURCE_Server
 		factory/source/*.cpp
 		handlers/source/*.cpp
-		postgres/source/*.cpp
+		database/mongodb/source/*.cpp
+		# database/postgres/source/*.cpp
 		server-run/source/*.cpp
 	)
 
@@ -25,11 +28,11 @@ add_library(${PROJECT_NAME} SHARED ${HEADERS_Server} ${SOURCE_Server})
 
 target_compile_definitions(${PROJECT_NAME} PUBLIC ${Poco_DEFINITIONS})
 
-target_link_directories(${PROJECT_NAME} PUBLIC ${Poco_INCLUDE_DIRS} ${PostgreSQL_INCLUDE_DIRS})
+target_link_directories(${PROJECT_NAME} PUBLIC ${Poco_INCLUDE_DIRS})
 
-target_include_directories(${PROJECT_NAME} PUBLIC ${Poco_INCLUDE_DIRS} ${PostgreSQL_INCLUDE_DIRS})
+target_include_directories(${PROJECT_NAME} PUBLIC ${Poco_INCLUDE_DIRS})
 
-target_link_libraries(${PROJECT_NAME} PUBLIC ${Poco_LIBRARIES} ${PostgreSQL_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} PUBLIC ${Poco_LIBRARIES})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
 
