add openssl at CmakeLists.txt

--- a/Server/CMakeLists.txt
+++ b/Server/CMakeLists.txt
@@ -5,7 +5,7 @@ project(Server C CXX)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 find_package(Poco COMPONENTS Net Util Data MongoDB REQUIRED)
-find_package(Boost)
+# find_package(Boost)
 find_package(OpenSSL REQUIRED COMPONENTS SSL Crypto)
 # find_package(PostgreSQL REQUIRED)
 
@@ -31,11 +31,11 @@ add_library(${PROJECT_NAME} SHARED ${HEADERS_Server} ${SOURCE_Server})
 
 target_compile_definitions(${PROJECT_NAME} PUBLIC ${Poco_DEFINITIONS})
 
-target_link_directories(${PROJECT_NAME} PUBLIC ${Poco_INCLUDE_DIRS} ${OpenSSL_INCLUDE_DIRS})
+target_link_directories(${PROJECT_NAME} PUBLIC ${Poco_INCLUDE_DIRS} ${OPENSSL_INCLUDE_DIR})
 
-target_include_directories(${PROJECT_NAME} PUBLIC ${Poco_INCLUDE_DIRS} ${OpenSSL_INCLUDE_DIRS})
+target_include_directories(${PROJECT_NAME} PUBLIC ${Poco_INCLUDE_DIRS} ${OPENSSL_INCLUDE_DIR})
 
-target_link_libraries(${PROJECT_NAME} PUBLIC ${Poco_LIBRARIES} ${OpenSSL_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} PUBLIC ${Poco_LIBRARIES} ${OPENSSL_LIBRARIES})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
 
