--- a/Server/CMakeLists.txt
+++ b/Server/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 find_package(Poco COMPONENTS Net Util Data MongoDB REQUIRED)
 # find_package(Boost)
 find_package(OpenSSL REQUIRED COMPONENTS SSL Crypto)
+find_package(cpp-jwt REQUIRED)
 # find_package(PostgreSQL REQUIRED)
 
 file(GLOB HEADERS_Server
@@ -29,13 +30,13 @@ file(GLOB SOURCE_Server
 
 add_library(${PROJECT_NAME} SHARED ${HEADERS_Server} ${SOURCE_Server})
 
-target_compile_definitions(${PROJECT_NAME} PUBLIC ${Poco_DEFINITIONS})
+target_compile_definitions(${PROJECT_NAME} PUBLIC ${Poco_DEFINITIONS} ${JWT_DEFINITIONS})
 
 target_link_directories(${PROJECT_NAME} PUBLIC ${Poco_INCLUDE_DIRS} ${OPENSSL_INCLUDE_DIR})
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${Poco_INCLUDE_DIRS} ${OPENSSL_INCLUDE_DIR})
 
-target_link_libraries(${PROJECT_NAME} PUBLIC ${Poco_LIBRARIES} ${OPENSSL_LIBRARIES})
+target_link_libraries(${PROJECT_NAME} PUBLIC ${Poco_LIBRARIES} ${OPENSSL_LIBRARIES} cpp-jwt::cpp-jwt)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
 
