fix web-server structure, add algorithms, jwt, mongo, redis, update handlers

--- a/Server/database/CMakeLists.txt
+++ b/Server/database/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.5)
 
-project(Server C CXX)
+project(database C CXX)
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
@@ -8,23 +8,18 @@ find_package(Poco REQUIRED COMPONENTS Foundation Net Data Util MongoDB Redis)
 find_package(OpenSSL REQUIRED COMPONENTS SSL Crypto)
 find_package(cpp-jwt REQUIRED)
 
-file(GLOB HEADERS_Server
-	database/include/algorithms/*.h
-	database/include/mongodb/*.h
-	database/include/redis/*.h
-	factory/include/*.h
-	handlers/include/*.h
-	server-run/include/*.h
-	)
+file(GLOB HEADERS_DataBase
+        include/algorithms/*.h
+        include/mongodb/*.h
+        include/redis/*.h
+        )
 
-file(GLOB SOURCE_Server
-	database/source/algorithms/*.h
-	database/source/mongodb/*.h
-	database/source/redis/*.h
-	factory/source/*.h
-	handlers/source/*.h
-	server-run/source/*.h
-	)
+file(GLOB SOURCE_database
+        source/algorithms/*.cpp
+        source/mongodb/*.cpp
+        source/redis/*.cpp
+        )
+
 
 add_library(${PROJECT_NAME} SHARED ${HEADERS_DataBase} ${SOURCE_DataBase})
 
@@ -39,7 +34,7 @@ target_link_libraries(${PROJECT_NAME} PUBLIC ${Poco_LIBRARIES} ${OPENSSL_LIBRARI
 set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
 
 set(${PROJECT_NAME}_DEFINITIONS
-	CACHE INTERNAL "${PROJECT_NAME}: Definitions" FORCE)
+        CACHE INTERNAL "${PROJECT_NAME}: Definitions" FORCE)
 
 set(${PROJECT_NAME}_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/include
-	CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)
+        CACHE INTERNAL "${PROJECT_NAME}: Include Directories" FORCE)
