add preloader, serializer, configs.json; fix handlers

--- a/Server/CMakeLists.txt
+++ b/Server/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 find_package(Poco REQUIRED COMPONENTS Foundation Net Data Util MongoDB Redis)
 find_package(OpenSSL REQUIRED COMPONENTS SSL Crypto)
 find_package(cpp-jwt REQUIRED)
+find_package(Boost COMPONENTS system filesystem REQUIRED)
 
 file(GLOB HEADERS_Server
 	database/include/algorithms/*.h
@@ -14,19 +15,21 @@ file(GLOB HEADERS_Server
 	database/include/redis/*.h
 	factory/include/*.h
 	handlers/include/*.h
+	handlers/include/Base/*.h
 	server-run/include/*.h
 	)
 
 file(GLOB SOURCE_Server
-	database/source/algorithms/*.h
-	database/source/mongodb/*.h
-	database/source/redis/*.h
-	factory/source/*.h
-	handlers/source/*.h
-	server-run/source/*.h
+	database/source/algorithms/*.cpp
+	database/source/mongodb/*.cpp
+	database/source/redis/*.cpp
+	factory/source/*.cpp
+	handlers/source/*.cpp
+	handlers/include/Base/*.cpp
+	server-run/source/*.cpp
 	)
 
-add_library(${PROJECT_NAME} SHARED ${HEADERS_DataBase} ${SOURCE_DataBase})
+add_library(${PROJECT_NAME} SHARED ${HEADERS_Server} ${SOURCE_Server})
 
 target_compile_definitions(${PROJECT_NAME} PUBLIC ${Poco_DEFINITIONS} ${JWT_DEFINITIONS})
 
@@ -34,7 +37,7 @@ target_link_directories(${PROJECT_NAME} PUBLIC ${Poco_INCLUDE_DIRS} ${OPENSSL_IN
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${Poco_INCLUDE_DIRS})
 
-target_link_libraries(${PROJECT_NAME} PUBLIC ${Poco_LIBRARIES} ${OPENSSL_LIBRARIES} cpp-jwt::cpp-jwt)
+target_link_libraries(${PROJECT_NAME} PUBLIC ${Poco_LIBRARIES} ${OPENSSL_LIBRARIES} ${Boost_FILESYSTEM_LIBRARY} ${Boost_SYSTEM_LIBRARY} cpp-jwt::cpp-jwt)
 
 set_target_properties(${PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
 
