fix admin panel, exceptions, BaseHandler

--- a/config.json
+++ b/config.json
@@ -2,12 +2,12 @@
   "MongoDbAuthenticationName" : "admin",
   "MongoDbName" : "UsersDB",
   "MongoDbCollectionName" : "Users",
-  "MongoDbHost" : "host",
+  "MongoDbHost" : "localhost",
   "MongoDbPort" : "27017",
-  "MongoDbUser" : "RCOD_GCOD",
-  "MongoDbPassword" : "secret",
-  "MongoDbConnectionString" : "mongodb://name:pwd@host:port/?authSource=UsersDB&readPreference=primary&appname=MongoDB%20Compass&directConnection=true&ssl=false",
-  "RedisDbHost" : "host",
+  "MongoDbUser" : "DbName",
+  "MongoDbPassword" : "pwd",
+  "MongoDbConnectionString" : "mongodb://DbName:pwd@localhost:27017/?authSource=UsersDB&readPreference=primary&appname=MongoDB%20Compass&directConnection=true&ssl=false",
+  "RedisDbHost" : "172.23.192.49",
   "RedisDbPort" : "6379",
   "RedisDbPassword" : "secret",
   "JWTrefreshTokenKey" : "secret",
@@ -21,8 +21,9 @@
   "GMailServerPort" : "587",
   "GMailSenderId" : "name",
   "GMailSenderMail" : "name@gmail.com",
-  "GMailSenderPwd" : "secret",
-  "MaxThreads": "8",
+  "GMailSenderPwd" : "pwd",
   "Host": "0.0.0.0",
-  "Port": "8080"
+  "Port": "8080",
+  "FrontHost" : "0.0.0.0",
+  "FrontPort" : "8082"
 }
