--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
   "MongoDbUser" : "DbName",
   "MongoDbPassword" : "pwd",
   "MongoDbConnectionString" : "mongodb://DbName:pwd@localhost:27017/?authSource=UsersDB&readPreference=primary&appname=MongoDB%20Compass&directConnection=true&ssl=false",
-  "RedisDbHost" : "172.23.192.49",
+  "RedisDbHost" : "localhost",
   "RedisDbPort" : "6379",
   "RedisDbPassword" : "secret",
   "JWTrefreshTokenKey" : "secret",
